# libvmod-triggerfile

./: CHANGES.rst  Makefile.am  README.rst  configure.ac  vmod-example.spec  vmod-triggerfile.spec
debian/: changelog  control  dirs  rules
m4/: ax_pthread.m4
src/: Makefile.am  vmod_triggerfile.c  vmod_triggerfile.vcc
src/tests/: test01.vtc
